# face_recognition_service

./: .gitignore  CLAUDE.md  Makefile  README-DEV.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml
alembic/: env.py
alembic/versions/: 37610867dec0_create_users.py  488edca6f68e_indexing_faces.py  d54a7e61edbf_initial_tables.py  da27c6f2f800_create_faces.py
app/domain/face_recognition/: types.py
app/domain/face_recognition/command_handlers/: add_face_encoding_handler.py  search_similar_faces_handler.py
apps/backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 001_initial_migration.py
apps/backend/app/: main.py
apps/backend/app/api/: router.py
apps/backend/app/api/v1/: auth.py  face_enroll.py  face_match.py  users.py
apps/backend/app/core/: config.py  database.py  dependencies.py
apps/backend/app/models/: face_encoding.py  user.py
apps/backend/app/schemas/: auth.py  face.py  face_enroll.py  user.py
apps/backend/app/services/: auth_service.py  face_enroller.py  face_matcher.py  face_repository.py  face_service.py  image_input.py  user_repository.py  user_service.py
apps/frontend/: index.html  nginx.conf  package-lock.json  package.json
apps/frontend/src/: debug.ts  main.tsx  model.ts
scripts/: generate-secret-key.sh
src/: config.py  database.py  main.py
src/face_recognition/: router.py
src/faces/: crud.py  models.py  router.py  schemas.py  services.py
src/users/: crud.py  models.py  router.py
templates/: find_similar.html
(+23 files in other folders)
